--- a/Intent/src/main/res/layout/activity_secondary.xml
+++ b/Intent/src/main/res/layout/activity_secondary.xml
@@ -13,7 +13,7 @@
         android:layout_height="59dp"
         android:textAlignment="center"
         android:layout_marginTop="80dp"
-        android:text="@string/title_home"
+        android:text="@string/message_from_main_is"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
